--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ body {
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
-  display: block;
+  display: block !important;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
