--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@ body {
   padding: 16px;
 }
 
-.form-group:focus {
+.form-control:focus {
   border-color: #464E2E;
   box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
 } 
