--- a/index.css
+++ b/index.css
@@ -86,8 +86,8 @@ body {
 }
 
 .form-control:focus {
-  border-color: #464E2E;
-  box-shadow: 0 0 0 0.2rem rgba(70, 78, 46, 0.25);
+  border-color: #464E2E !important;
+  box-shadow: 0 0 0 0.2rem rgba(70, 78, 46, 0.25) !important;
 } 
 
 .btn{
