--- a/index.css
+++ b/index.css
@@ -106,6 +106,11 @@ body {
   box-shadow: 0 0 0 0.2rem rgba(233, 229, 214, 0.25) !important;
 }
 
+.btn:focus {
+  color: #FFFFF2 !important;   
+}
+
+
 #tour {
   padding-bottom: 15px;
 }
