--- a/index.css
+++ b/index.css
@@ -102,8 +102,8 @@ body {
   padding: 12px;
   width: 100px;
   color: #FFFFF2 !important;
-  border: 1px solid #E9E5D6 !important;
-  box-shadow: 0 0 0 0.2rem rgba(233, 229, 214, 0.25) !important;
+  border: 1px solid #FFFFF2 !important;
+  box-shadow: 0 0 0 0.2rem rgba(255, 255, 242, 0.25) !important;
 }
 
 .btn:focus {
