updated events page

--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ body {
 
 .bg-2 {
   background-color: #F1EEE4;
-  height: 600px;
+  
   
 }
 
@@ -128,14 +128,24 @@ body {
 
 .up-arrow {
   color: #FFFFF2;
+  border: 2px white solid;
+  border-radius: 50%;
+  padding: 15px;
+  
 }
 
 .up-arrow:focus {
   color: #FFFFF2;
+  border: 2px #6b6b6b;
+  border-radius: 50%;
+  padding: 15px;
 }
 
 .up-arrow:hover {
   color: #E9E5D6;
+  border: 2px #6b6b6b;
+  border-radius: 50%;
+  padding: 15px;
 }
 
 footer p{
