Fixed contact section

--- a/index.css
+++ b/index.css
@@ -107,16 +107,24 @@ nav .container-fluid {
 }
 
 
-.row .col-md-4, .glyphicon glyphicon-map-marker, .glyphicon glyphicon-phone, .glyphicon glyphicon-envelope {
+.row .col-md-4, .fa fa-map-pin, .fa fa-phone, .fa fa-envelope {
   font-size: 2rem;
 }
 
-.row .glyphicon {
+.ft p {
+  font-size: 20px;
+}
+
+.row .fa {
   background-color: #464E2E;
-  font-size: 24px;
+  font-size: 18px;
   color: white;
   border-radius: 50%;
-  padding: 16px;
+  padding: 15px;
+}
+
+.form-control {
+  margin-bottom: 20px;
 }
 
 .form-control:focus {
@@ -151,10 +159,9 @@ nav .container-fluid {
 
 .up-arrow {
   color: #FFFFF2;
-  border: 2px white solid;
   border-radius: 50%;
   padding: 15px;
-  
+  background-color: #3A4026;
 }
 
 .up-arrow:focus {
@@ -166,7 +173,7 @@ nav .container-fluid {
 
 .up-arrow:hover {
   color: #E9E5D6;
-  border: 2px #6b6b6b;
+  border: 1px #FFFFF2 solid;
   border-radius: 50%;
   padding: 15px;
 }
@@ -175,6 +182,6 @@ footer p{
   color: #FFFFF2;
 }
 
-#comment {
-  margin-top: 10px;
+.comment {
+  margin-top: 10px !important;
 }
