--- a/index.css
+++ b/index.css
@@ -123,7 +123,7 @@ nav .container-fluid {
   padding: 15px;
 }
 
-.form-control {
+.fc {
   margin-bottom: 20px;
 }
 
@@ -137,6 +137,7 @@ nav .container-fluid {
   padding: 12px;
   width: 100px;
   color: white;
+  border: none !important;
 }
 
 .btn:hover {
@@ -144,7 +145,7 @@ nav .container-fluid {
   padding: 12px;
   width: 100px;
   color: #FFFFF2 !important;
-  border: 1px solid #FFFFF2 !important;
+  border: none !important;
   box-shadow: 0 0 0 0.2rem rgba(255, 255, 242, 0.25) !important;
 }
 
