--- a/member-login.css
+++ b/member-login.css
@@ -41,7 +41,7 @@
     padding: 12px;
     width: 100%;
     color: #FFFFF2 !important;
-    border: 1px solid #FFFFF2 !important;
+    border: none !important;
     box-shadow: 0 0 0 0.2rem rgba(255, 255, 242, 0.25) !important;
   }
   
