--- a/events.css
+++ b/events.css
@@ -9,32 +9,87 @@ html {
   }
 
 .event-container{
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    
-}
-
-.eventcontent {
-    background: white;
-    margin: 20px;
-    text-align: center;
-    height: 480px;
+   display: block;
+   margin-left: 300px;
+   
     
     
 }
 
-.eventcontent img{
-    width: 300px;
-    height: 300px;
+.eventcontent-1{
+    background-color: white;
+    width: 75%;
+    height: 290px;
+    margin: 50px;
+    box-shadow: 5px 3px 15px 5px #8A8A8A;
+    
+}
+
+.eventcontent-2{
+    background-color: white;
+    width: 75%;
+    height: 290px;
+    margin: 50px;
+    box-shadow: 5px 3px 15px 5px #8A8A8A;
+}
+
+.eventcontent-3{
+    background-color: white;
+    width: 75%;
+    height: 290px;
+    margin: 50px;
+    box-shadow: 5px 3px 15px 5px #8A8A8A;
+}
+.eventcontent-1 img{
+    width: 400px;
+    height: 288px;
+   padding: -10px;
+   margin-top: -80px;
     
     
 }
 
-.titleevent{
+.eventcontent-2 img {
+    width: 400px;
+    height: 288px;
+    padding: -10px;
+   margin-top: -80px;
+   margin-left: 800px;
+}
+
+.eventcontent-3 img {
+    width: 400px;
+    height: 288px;
+   padding: -10px;
+   margin-top: -80px;
+}
+
+.eventcontent-1, .eventcontent-2, .eventcontent-3 {
+    transition: transform 0.5s
+}
+
+.eventcontent-1:hover {
+    transform: scale(1.5);
+}
+
+.eventcontent-2:hover {
+    transform: scale(1.5);
+}
+
+.eventcontent-3:hover {
+    transform: scale(1.5);
+}
+
+.titleevent-right, p{
     font-weight: 600;
+    text-align: center;
+    
 }
 
+.titleevent-left {
+    font-weight: 600;
+    text-align: center;
+}
 .attend-signup{
     border: 2px solid #464E2E; 
     border-radius: 25px;
