--- a/events.css
+++ b/events.css
@@ -21,7 +21,9 @@ html {
     width: 75%;
     height: 290px;
     margin: 50px;
+    padding: 15px;
     box-shadow: 5px 3px 15px 5px #8A8A8A;
+    position: relative;
     
 }
 
@@ -30,7 +32,9 @@ html {
     width: 75%;
     height: 290px;
     margin: 50px;
+    padding: 15px;
     box-shadow: 5px 3px 15px 5px #8A8A8A;
+    position: relative;
 }
 
 .eventcontent-3{
@@ -38,13 +42,18 @@ html {
     width: 75%;
     height: 290px;
     margin: 50px;
+    padding: 15px;
     box-shadow: 5px 3px 15px 5px #8A8A8A;
+    position: relative;
 }
 .eventcontent-1 img{
     width: 400px;
     height: 288px;
    padding: -10px;
-   margin-top: -80px;
+   margin-top: -95px;
+   margin-left: 785px;
+   
+   
     
     
 }
@@ -53,15 +62,27 @@ html {
     width: 400px;
     height: 288px;
     padding: -10px;
-   margin-top: -80px;
-   margin-left: 800px;
+   margin-top: -95px;
+   margin-left: 785px;
 }
 
 .eventcontent-3 img {
     width: 400px;
     height: 288px;
    padding: -10px;
-   margin-top: -80px;
+   margin-top: -95px;
+   margin-left: 785px;
+}
+
+.date{
+    background-color: #3A4026;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    color: white;
+    text-transform: uppercase;
+    padding: 30px;
+    
 }
 
 .eventcontent-1, .eventcontent-2, .eventcontent-3 {
