Added images to home page and employee login.

--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ nav .container-fluid {
 }
 
 .jumbotron-image {
-  background-image: url(bdbdbd.png);
+  background-image: url(jumbo.jpeg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
