Updated footer on all pages.

--- a/index.css
+++ b/index.css
@@ -248,6 +248,7 @@ footer p{
     padding: 0 0 5px 0;
     color: #fff;
     font-size: 14px;
+    width: 100%;
 }
 
 #footer .footer-top {
@@ -259,6 +260,7 @@ footer p{
 
 #footer .footer-top .footer-info {
     margin-bottom: 0px;
+    padding-top: 10px;
 }
 
 #footer .footer-top .footer-info h3 {
@@ -324,10 +326,18 @@ footer p{
     line-height: 1;
 }
 
-#footer .footer-top .footer-links ul li {
+#footer .footer-top .footer-links {
     padding: 10px 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
+}
+
+footer li{
+  padding: 10px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: start;
 }
 
 #footer .footer-top .footer-links ul li:first-child {
@@ -342,10 +352,11 @@ footer p{
 }
 
 #footer .footer-top .footer-links ul a:hover {
-    color: #e96b56;
+    color: #bab7ab;
 }
 
 #footer .footer-top .footer-contact {
+    padding-top: 10px;
     margin-bottom: 15px;
 }
 
