added slideshow and  add text box on photos

--- a/events.css
+++ b/events.css
@@ -1,5 +1,4 @@
 *{
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -8,13 +7,14 @@ html {
   }
   
   body {
-    min-height: 100%;
-    background-color: rgb(226, 228, 231);
+   min-height: 300px;
+    /*background-color: rgb(226, 228, 231);*/
+   
     
   }
 
 .jumbotron {
- background-color: black;
+ 
  margin: 70px;
  margin-left: 250px;
  width: 70%;
@@ -26,12 +26,40 @@ border-radius: 10px;
 .jumbotron img {
     height: 100%;
     width: 100%;
+    margin: 0 50px;
      
 }
-.event-container {
+/* Make the image fully responsive */
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+    
+  }
+
+ /* Container holding the image and the text */
+
+  
+  /* Bottom right text */
+  .text-block {
+    position: absolute;
+    bottom: 10px;
+    left: 20px;
+    background-color: rgba(0, 0, 0, 0.7); 
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 400px;
+    height: 300px;
+  }
+
+  .text-block h2 {
+      margin-top: 120px;
+  }
+/*.event-container {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
     
 }
 .eventbox img{
@@ -43,10 +71,12 @@ border-radius: 10px;
 .eventbox {
     background-color: #464E2E;
     border-radius: 10px;
-    margin: 45px;
+    margin: 25px;
     color: white;
     text-align: center;
     font-weight: 400;
+    position: absolute;
+    top: 25%;
 }
 
 .eventbox span {
@@ -56,7 +86,7 @@ border-radius: 10px;
 
 .event-nav {
     position: absolute;
-    top: 85%;
+    top: 100px;
 }
 
 .eventbox {
@@ -66,12 +96,9 @@ border-radius: 10px;
 .eventbox:hover {
     transform: scale(1.2);
 }
+*/
 
-
-
-
-
-
+  
 
 
 
