--- a/events.css
+++ b/events.css
@@ -13,22 +13,7 @@ html {
     
   }
 
-.jumbotron {
- 
- margin: 70px;
- margin-left: 250px;
- width: 70%;
- height: 700px;
-border-radius: 10px;
- 
-}
 
-.jumbotron img {
-    height: 100%;
-    width: 100%;
-    margin: 0 50px;
-     
-}
 /* Make the image fully responsive */
 .carousel-inner img {
     width: 100%;
@@ -36,25 +21,48 @@ border-radius: 10px;
     
   }
 
- /* Container holding the image and the text */
+
 
   
   /* Bottom right text */
   .text-block {
     position: absolute;
-    bottom: 10px;
-    left: 20px;
+    bottom: 0;
+    left: 180px;
     background-color: rgba(0, 0, 0, 0.7); 
     color: white;
     padding-left: 20px;
     padding-right: 20px;
-    width: 400px;
-    height: 300px;
+    width: 500px;
+    height: 900px;
   }
-
+  .carousel-item p {
+      margin-top: 70px;
+      font-weight: 400;
+      font-size: 1.5rem;
+  }
+  
   .text-block h2 {
       margin-top: 120px;
   }
+
+  .resident-join a{
+      text-decoration: none;
+      
+  }
+
+  .resident-join {
+      background: black;
+      width: 150px;
+      padding: 10px;
+      text-align: center;
+      color: white;
+      font-weight: 600;
+      text-transform: uppercase;
+      margin-top: 200px;
+      font-size: 1.1rem;
+  }
+  
 /*.event-container {
     display: flex;
     align-items: center;
