--- a/events.css
+++ b/events.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 html {
     height: 100%;
@@ -27,17 +28,17 @@ html {
   /* Bottom right text */
   .text-block {
     position: absolute;
-    bottom: 0;
     left: 180px;
+    top: 40%;
     background-color: rgba(0, 0, 0, 0.7); 
     color: white;
     padding-left: 20px;
     padding-right: 20px;
     width: 500px;
-    height: 900px;
+    height: 500px;
   }
   .carousel-item p {
-      margin-top: 70px;
+      margin-top: 20px;
       font-weight: 400;
       font-size: 1.3rem;
   }
@@ -59,10 +60,19 @@ html {
       color: white;
       font-weight: 600;
       text-transform: uppercase;
-      margin-top: 200px;
-      font-size: 1.1rem;
+      margin-top: 50px;
+      font-size: 1rem;
   }
   
+@media (max-width: 1000px){
+  .text-block, h1{
+  width: 450px;
+  height: 450px;
+  
+    
+  }
+}
+
 
 
 
